fix footer padding and links on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -230,6 +230,7 @@ nav{
 footer {
 	background-color: black;
 	color: white;
-	padding: 50px;
+	padding: 50px 0px;
 	text-align: center;
+	font-size: 0.8em;
 }
